[KARAF-203] Apache Karaf 2.1.0 Release.
Updating jasypt version to 1.6_1 release.


git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@998723 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <cglib.bundle.version>2.1_3_6</cglib.bundle.version>
         <commons-codec.bundle.version>1.3_3</commons-codec.bundle.version>
         <commons-lang.bundle.version>2.4_4</commons-lang.bundle.version>
-        <jasypt.bundle.version>1.6_1-SNAPSHOT</jasypt.bundle.version>
+        <jasypt.bundle.version>1.6_1</jasypt.bundle.version>
         <jetty.bundle.version>6.1.22_2</jetty.bundle.version>
         <junit.bundle.version>4.7_1</junit.bundle.version>
 
