[KARAF-207] Apache Karaf 2.1.0 Release. \n Updating scm info
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@998738 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/trunk</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/trunk</developerConnection>
-        <url>http://svn.apache.org/viewvc/karaf/trunk/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</developerConnection>
+        <url>http://svn.apache.org/viewvc/karaf/branches/karaf-2.1.x/</url>
     </scm>
 
     <issueManagement>
