--- a/demos/branding/pom.xml
+++ b/demos/branding/pom.xml
@@ -1,7 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-         http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0           http://maven.apache.org/maven-v4_0_0.xsd">
 
 <!--
 
@@ -26,7 +23,7 @@
     <parent>
         <groupId>org.apache.karaf.demos</groupId>
         <artifactId>demos</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
 
     <groupId>org.apache.karaf.demos</groupId>
