--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <groupId>org.apache.karaf</groupId>
     <artifactId>karaf</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>Apache Karaf</name>
     <inceptionYear>2007</inceptionYear>
 
@@ -54,9 +54,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</developerConnection>
-        <url>http://svn.apache.org/viewvc/karaf/branches/karaf-2.1.x/</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/tags/karaf-2.1.0</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/tags/karaf-2.1.0</developerConnection>
+        <url>http://svn.apache.org/viewvc/karaf/tags/karaf-2.1.0</url>
     </scm>
 
     <issueManagement>
