--- a/shell/wrapper/pom.xml
+++ b/shell/wrapper/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.shell</groupId>
         <artifactId>shell</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
 
     <groupId>org.apache.karaf.shell</groupId>
     <artifactId>org.apache.karaf.shell.wrapper</artifactId>
     <packaging>bundle</packaging>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>Apache Karaf :: Shell Service Wrapper</name>
 
     <description>
