--- a/itests/dependencies/pom.xml
+++ b/itests/dependencies/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf</groupId>
         <artifactId>karaf</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.itests</groupId>
     <artifactId>dependencies</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.0</version>
+    <version>2.1.1-SNAPSHOT</version>
     <name>Apache Karaf :: Integration Tests Dependencies</name>
 
     <repositories>
