--- a/demos/branding/shell/pom.xml
+++ b/demos/branding/shell/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 <!--
 
@@ -24,13 +26,13 @@
     <parent>
         <groupId>org.apache.karaf.demos</groupId>
         <artifactId>org.apache.karaf.demos.branding</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.demos</groupId>
     <artifactId>org.apache.karaf.demos.branding.shell</artifactId>
     <packaging>bundle</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.0.1-SNAPSHOT</version>
     <name>Apache Karaf :: Demos :: Branding :: Shell</name>
 
     <build>
