--- a/archetypes/itests/pom.xml
+++ b/archetypes/itests/pom.xml
@@ -15,16 +15,16 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>archetypes</artifactId>
         <groupId>org.apache.karaf</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.1.0</version>
     </parent>
     <groupId>org.apache.karaf.archetypes</groupId>
     <artifactId>archetypes-itests</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>Apache Karaf :: Archetypes :: ITests</name>
 
     <dependencies>
