--- a/archetypes/command/pom.xml
+++ b/archetypes/command/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.apache.karaf</groupId>
         <artifactId>archetypes</artifactId>
-        <version>2.1.0</version>
+        <version>2.1.1-SNAPSHOT</version>
     </parent>
     
   <groupId>org.apache.karaf.archetypes</groupId>
   <artifactId>archetypes-command</artifactId>
-  <version>2.1.0</version>
+  <version>2.1.1-SNAPSHOT</version>
 
   <name>Apache Karaf :: Command Archetype</name>
 
