--- a/assembly/src/main/filtered-resources/etc/config.properties
+++ b/assembly/src/main/filtered-resources/etc/config.properties
@@ -54,7 +54,7 @@ org.osgi.framework.system.packages.extra=
 org.osgi.framework.bootdelegation=sun.*,com.sun.*,javax.transaction,javax.transaction.*
 
 # OSGi Execution Environment
-org.osgi.framework.executionenvironment=J2SE-1.5,J2SE-1.4,J2SE-1.3
+org.osgi.framework.executionenvironment=J2SE-1.5,J2SE-1.4,J2SE-1.3,J2SE-1.2
 
 # To enable the use of the startup.properties file to control the start level:
 karaf.auto.start=startup.properties
