--- a/shell/console/pom.xml
+++ b/shell/console/pom.xml
@@ -135,7 +135,7 @@
                                            *
                         </Bundle-NativeCode>
                         <Bundle-Activator>
-                            org.apache.felix.gogo.runtime.Activator
+                            org.apache.karaf.shell.console.jline.Activator
                         </Bundle-Activator>
                         <Main-Class>
                             org.apache.karaf.shell.console.Main
