[KARAF-269] Update jetty bundle version in main karaf 2.1.1 pom.
Replacing snapshot with release version of Jetty bundle.



git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@1033243 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <commons-codec.bundle.version>1.3_3</commons-codec.bundle.version>
         <commons-lang.bundle.version>2.4_4</commons-lang.bundle.version>
         <jasypt.bundle.version>1.6_1</jasypt.bundle.version>
-        <jetty.bundle.version>6.1.25_1-SNAPSHOT</jetty.bundle.version>
+        <jetty.bundle.version>6.1.25_1</jetty.bundle.version>
         <junit.bundle.version>4.7_2</junit.bundle.version>
 
         <commons-logging.version>1.1.1</commons-logging.version>
