--- a/demos/web/pom.xml
+++ b/demos/web/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.karaf.demos</groupId>
     <artifactId>demos</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
   </parent>
 
   <groupId>org.apache.karaf.demos</groupId>
