--- a/tooling/pom.xml
+++ b/tooling/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf</groupId>
         <artifactId>karaf</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.1.1</version>
     </parent>
 
     <groupId>org.apache.karaf.tooling</groupId>
     <artifactId>tooling</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <name>Apache Karaf :: Tooling</name>
 
     <modules>
