--- a/webconsole/admin/pom.xml
+++ b/webconsole/admin/pom.xml
@@ -24,13 +24,13 @@
     <parent>
         <groupId>org.apache.karaf.webconsole</groupId>
         <artifactId>webconsole</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.1.1</version>
     </parent>
 
     <groupId>org.apache.karaf.webconsole</groupId>
     <artifactId>org.apache.karaf.webconsole.admin</artifactId>
     <packaging>bundle</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <name>Apache Karaf :: Web Console :: Admin Plugin</name>
   
     <properties>
