--- a/deployer/spring/pom.xml
+++ b/deployer/spring/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.deployer</groupId>
         <artifactId>deployer</artifactId>
-        <version>2.1.1</version>
+        <version>2.1.2-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.deployer</groupId>
     <artifactId>org.apache.karaf.deployer.spring</artifactId>
     <packaging>bundle</packaging>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>Apache Karaf :: Spring Deployer</name>
 
     <description>This deployer transforms a plain spring xml file to a deployable bundle</description>
