--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.apache.karaf</groupId>
     <artifactId>karaf</artifactId>
     <packaging>pom</packaging>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>Apache Karaf</name>
     <inceptionYear>2007</inceptionYear>
 
@@ -55,9 +55,9 @@
     </modules>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/tags/karaf-2.1.1</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/tags/karaf-2.1.1</developerConnection>
-        <url>http://svn.apache.org/viewvc/karaf/tags/karaf-2.1.1</url>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x</developerConnection>
+        <url>http://svn.apache.org/viewvc/karaf/branches/karaf-2.1.x/</url>
     </scm>
 
     <issueManagement>
