--- a/shell/commands/pom.xml
+++ b/shell/commands/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <groupId>org.apache.karaf.shell</groupId>
         <artifactId>shell</artifactId>
-        <version>2.1.1</version>
+        <version>2.1.2-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.karaf.shell</groupId>
     <artifactId>org.apache.karaf.shell.commands</artifactId>
     <packaging>bundle</packaging>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>Apache Karaf :: Shell Various Commands</name>
 
     <description>
