--- a/itests/dependencies/pom.xml
+++ b/itests/dependencies/pom.xml
@@ -21,8 +21,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.karaf</groupId>
-        <artifactId>karaf</artifactId>
+        <groupId>org.apache.karaf.itests</groupId>
+        <artifactId>itests</artifactId>
         <version>2.1.3-SNAPSHOT</version>
     </parent>
 
