fixed typo in system.properties script
Signed-off-by: Andreas Pieber <anpieber@gmail.com>

git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@1054092 13f79535-47bb-0310-9956-ffa450edef68

--- a/assembly/src/main/distribution/text/etc/system.properties
+++ b/assembly/src/main/distribution/text/etc/system.properties
@@ -55,7 +55,7 @@ karaf.shell.init.script=${karaf.home}/etc/shell.init.script
 xml.catalog.files=
 
 #
-# Suppress the bell in the console when hitting backspace to many times
+# Suppress the bell in the console when hitting backspace too many times
 # for example
 #
 jline.nobell=true
